# imle_policy

./: .gitignore  README.md  pyproject.toml
imle_policy/: get_mujoco.sh  train.py
imle_policy/configs/: Lift_config.json  NutAssemblySquare_config.json  PickPlaceCan_config.json  ToolHang_config.json  TwoArmTransport_config.json  kitchen_config.json  pusht_config.json  ur3_blockpush_config.json
imle_policy/dataloaders/: dataset_kitchen.py  dataset_pusht.py  dataset_robomimic.py  dataset_robomimic_hdf5.py  dataset_ur3_blockpush.py
imle_policy/envs/: pusht_env.py  test_kitchen.py
imle_policy/envs/ur3/: MUJOCO_LOG.TXT  play_with_env.py  ur3_blockpush.py
imle_policy/envs/ur3/gym_custom (copy)/: __init__.py  core.py  logger.py
imle_policy/envs/ur3/gym_custom (copy)/envs/: __init__.py  registration.py
imle_policy/envs/ur3/gym_custom (copy)/envs/custom/: ur_utils.py
imle_policy/envs/ur3/gym_custom (copy)/envs/mujoco/: mujoco_env.py
imle_policy/envs/ur3/gym_custom (copy)/spaces/: __init__.py  box.py  space.py  utils.py
imle_policy/envs/ur3/gym_custom (copy)/utils/: seeding.py
imle_policy/envs/ur3/gym_custom (copy)/vector/: __init__.py  async_vector_env.py  sync_vector_env.py  vector_env.py
imle_policy/envs/ur3/gym_custom (copy)/vector/utils/: __init__.py  numpy_utils.py  shared_memory.py  spaces.py
imle_policy/envs/ur3/gym_custom/envs/mujoco/: mujoco_env.py
imle_policy/evaluation/: eval_policy_kitchen.py  eval_policy_pusht.py  eval_policy_robomimic.py  eval_policy_robomimic_two_arm.py  eval_policy_ur3_blockpush.py
imle_policy/models/: __init__.py  diffusion_network.py  rs_imle_network.py  vision_network.py
imle_policy/utils/: __init__.py  eval_utilities.py  losses.py  process_kitchen_dataset.py  process_real_dataset.py  process_ur3_dataset.py  rotation_transforms.py
